2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* Back out most changes since
	b580c6ac5bf8eea1f442b8bddc60283b047ade1e.  Handling charsets
	properly by working in utf8 and then converting sucks.  Problems
	include
	  - gettext hates you (wants to return stuff in local charset)
	  - strerror hates you (same reason, but you can't turn it off)
	  - can't report charset conversion errors
	We thus return to our "sorta-correct, by accident" status quo.
	Only change left in is signedness fix in
	5548868ab56d939c1fd8713aa2ac8caacd1184a1.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* ui.cc (sanitize): Fix signedness bug in comparison.
	* unix/unix.{cc,hh}: New files.
	* Makefile.am (UNIX_PLATFORM_SOURCES): Add them.
	* unix/process.cc (is_executable, make_executable): Use new
	function last_error.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.{cc,hh} (system_charset): Expose.
	* monotone.cc (cpp_main): Use it to fiddle with gettext's charset
	conversion and make --help output actually correct.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.cc (outprep): Don't sanitize all output; removes too
	many valid characters (\r, \t, etc.).
	* ui.cc: Call outprep on ticker output.
	(inform): Do still sanitize ui.inform() output.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.cc (outprep): New function.
	* ui.cc (inform): Use it.
	* monotone.cc (cpp_main): Use it.
	Everything that writes user-intended output directly (i.e., via
	cout) must call outprep() on that data before printing it.
	
2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Trick popt into converting its generated
	help messages into the current locale's charset.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* ui.cc (inform, sanitize): Convert all output from utf8 to
	current locale's charset.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Use bind_textdomain_codeset to request